--- a/Códigos/Módulo 3/C19A04 - Configurando a Posição da Imagem/index3.html
+++ b/Códigos/Módulo 3/C19A04 - Configurando a Posição da Imagem/index3.html
@@ -8,11 +8,8 @@
     <style>
         body {
             height: 98vh;
-            border: 1px dashed black;
-            background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
-            background-size: 100px;
-            background-repeat: no-repeat;
-            background-position: 10px 10px;
+            background-image: url('../Imagens/wallpaper003.jpg');
+            background-position: center bottom;
         }
     </style>
 </head>
