--- a/Códigos/Módulo 3/C21A04 - Aprendendo a Trabalhar com Tabelas Grandes/index_tabela001.html
+++ b/Códigos/Módulo 3/C21A04 - Aprendendo a Trabalhar com Tabelas Grandes/index_tabela001.html
@@ -3,71 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabelas</title>
+    <title>Uso de Tabelas Grandes</title>
     <style>
         body {
-            font-family:Arial, Helvetica, sans-serif;
+            font-family: Arial, Helvetica, sans-serif;
         }
 
         table {
-            width: 400px;
-            height: 400px;
-            border-collapse: collapse;
+            width: 500px;
         }
 
-        tr.linha {
-            background-color: gray;
-        }
-
-        td {
+        td, th {
             border: 1px solid black;
-            padding: 8px;
-            text-align: center; /* Alinhamento Horizontal */
-            vertical-align: top;
+            padding: 10px;
         }
 
-        td.dado {
-            background-color: yellow;
+        thead, tfoot {
+            background-color: gray;
+            color: white;
         }
+
+        .num {
+            text-align: right;
+        }
+
     </style>
 </head>
 <body>
-    <h1>Minha primeira tabela</h1>
-    <!--
-        HIERARQUIA DE TABELAS (simples)
-        TABLE = Tabela
-            TABLE ROW = linha de tabela
-                TABLE HEADER = cabeçalho de tabela
-                TABLE DATA = dado de tabela
+    <h1>Uso de Tabelas Grandes</h1>
+    <!-- 
+        ANATOMIA PARA TABELAS GRANDES
+        TABLE
+            HEAD
+                TR, TD, TH
+            TBODY
+                TR, TD, TH
+            TFOOT
+                TR, TD, TH
     -->
     <table>
-        <tr> <!-- Primeira Linha -->
-            <td>A1</td>
-            <TD>B1</TD>
-            <td>C1</td>
-        </tr>
-        <tr class="linha"> <!-- Segunda Linha -->
-            <td>A2</td>
-            <TD>B2</TD>
-            <td>C2</td>
-        </tr>
-        <tr> <!-- Terceira Linha -->
-            <td>A3</td>
-            <TD>B3</TD>
-            <td>C3</td>
-        </tr>
-        <tr> <!-- Quarta Linha -->
-            <td>A4</td>
-            <TD class="dado">B4</TD>
-            <td>C4</td>
-        </tr>
-        <tr> <!-- Quinta Linha -->
-            <td>A5</td>
-            <td>B5</td>
-        </tr>
-        <tr> <!-- Sexta Linha -->
-            <td>A6</td>
-        </tr>
+        <thead>
+            <tr>
+                <th>Estado</th>
+                <th>População</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">45.919.049</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21.168.791</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17.264.943</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <th>Total de Habitantes</th>
+                <td class="num"><strong>84.352.783</strong></td>
+            </tr>
+        </tfoot>
     </table>
 </body>
 </html>
